[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dis-radio"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "opendis>=1.0",
    "PyQt6>=6.0",
    "sounddevice>=0.5",
    "tomlkit>=0.15",
    "typing_extensions>=4.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
    "pytest>=9.0",
    "pytest-qt>=4.5",
    "ruff>=0.11",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["opendis.*", "sounddevice"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
